# PM4hep

./: CMakeLists.txt  PM4hepConfig.cmake.in  PM4hepConfigVersion.cmake.in  README.md
include/PM4hep/: PluginManager.h
include/PM4hep/Details/: PluginManagerDetails.h
python/GaudiPluginService/: __init__.py  cpluginsvc.py
src/: PluginManager.cpp  capi_pluginservice.cpp  capi_pluginservice.h  listcomponents.cpp
tests/: Interfaces.h  testLoading.cpp
tests/src/: UseCases.cpp
